--- a/style.css
+++ b/style.css
@@ -2,8 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: JetBrainsMono, Helvetica, sans-serif;
+    background-color: #162521;
   }
+@font-face {
+    font-family: JetBrainsMono;
+    src: url("/fonts/JetBrainsMono-Regular.ttf");
+}
 
 .header {
     display: flex;
@@ -18,18 +23,27 @@
 
 #menu-elements {
     display: flex;
+    list-style-type: none;
+}
+
+#ascii {
+    font-size: 5px;
 }
 
 .parent {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(6, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    background-color: #3C474B;
     }
     
     .div1 { grid-area: 1 / 4 / 4 / 6; }
     .div2 { grid-area: 4 / 4 / 7 / 6; }
     .div3 { grid-area: 1 / 1 / 7 / 4; }
     
+.div1, .div2, .div3 {
+    padding: 50px;
+}  
 
