--- a/style.css
+++ b/style.css
@@ -3,11 +3,17 @@
     padding: 0;
     box-sizing: border-box;
     font-family: JetBrainsMono, Helvetica, sans-serif;
-    background-color: #162521;
+ 
   }
 @font-face {
     font-family: JetBrainsMono;
     src: url("/fonts/JetBrainsMono-Regular.ttf");
+}
+
+body {
+    background-image: url("/images/gingham-baby-blue.jpg");
+    background-repeat: repeat;
+    background-size: auto;
 }
 
 .header {
@@ -17,7 +23,6 @@
 }
 
 .navbar {
-    background-color: #3C474B;
     padding: 5px;
 }
 
@@ -36,7 +41,7 @@
     grid-template-rows: repeat(6, 1fr);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
-    background-color: #3C474B;
+    padding: 50px;
     }
     
     .div1 { grid-area: 1 / 4 / 4 / 6; }
