Created animations.css for welcome splash

--- a/style.css
+++ b/style.css
@@ -17,15 +17,19 @@ body {
 }
 
 .container {
-    max-width: 80%;
-    margin: 0 auto;
+    width: 1200px;
+    margin: 0 auto; 
+}
+
+.box {
+    width: 600px;
+    margin: 0 auto; 
 }
 
 .header {
     display: flex;
     padding: 10px;
     justify-content: space-around;
- 
 }
 
 .navbar {
@@ -60,4 +64,5 @@ body {
     padding: 50px;
     border: 3px solid;
     background-color: mintcream;
+    box-shadow: 3px 3px;
 }  
