--- a/style.css
+++ b/style.css
@@ -66,3 +66,8 @@ body {
     background-color: mintcream;
     box-shadow: 3px 3px;
 }  
+
+.ending {
+    display: flex;
+    justify-content: center;
+}
